# ISBD-MIMUW

./: .gitignore  LICENSE  README.md
interface/: dbmsInterface.yaml
pit/: README.md  assert.go  conftest.go  go.mod  go.sum  logger.go  system_info_test.go  testhelpers.go
pit/client/: README.md  api_execution.go  api_metadata.go  api_proj3.go  api_proj4.go  api_schema.go  client.go  configuration.go  model_column.go  model_column_expression.go  model_column_reference_expression.go  model_columnar_binary_operation.go  model_columnar_unary_operation.go  model_copy_query.go  model_error.go  model_execute_query_request.go  model_function.go  model_get_query_result_request.go  model_limit_expression.go  model_literal.go  model_literal_value.go  model_logical_column_type.go  model_multiple_problems_error.go  model_multiple_problems_error_problems_inner.go  model_order_by_expression.go  model_query.go  model_query_query_definition.go  model_query_result_inner.go  model_query_result_inner_columns_inner.go  model_query_status.go  model_select_query.go  model_shallow_query.go  model_shallow_table.go  model_system_information.go  model_table_schema.go  response.go  utils.go
pit/parser/: grammar.peg  helpers.go  parser.go  parser_gen.go  parser_test.go
pit/tests/: conftest_test.go  conftest_v1_test.go  operators_functions_test.go  (+9 more)
projects/proj1/: CMakeLists.txt  Makefile  PROJECT.md  generate_file.py
projects/proj1/src/: crc64.c  crc64.h  file_reader.c  mmap_load.c  mmap_load.h  read_load.c  read_load.h  timer.c  timer.h
resources/: CONTRIBUTING.md  dbmsInterface.yaml
(+111 files in other folders)
